2007-05-19  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/application.rb (ApplicationController::don_is_spam): Add 'Akismet' timeout error handling.

2007-05-10  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/integration/cache_test.rb (CacheTest::test_caching_fix_article): New test.

	* donrails/app/models/article_sweeper.rb (ArticleSweeper): Fix to use for clear cache function.
	
	* donrails/lib/akismet.rb (Akismet::call_akismet): When Akismet host down or name resolution error, all messages are not blocked.

2007-05-09  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/admin/article_controller.rb (Admin): Fix to run cache_sweeper when use preview_article_confirm.

	* donrails/lib/akismet.rb (Akismet::call_akismet): Add timeout (5 seconds)

	* donrails/test/integration/login_story_test.rb (LoginStoryTest::test_login): Cleanup.

	* donrails/config/routes.rb: Add for parameter interpretaion miss for fcgi?

2007-05-06  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/functional/admin/login_controller_test.rb (Admin::test_logout)
	(Admin::test_authenticate__fail, Admin::test_authenticate)
	(Admin::test_login_index): move from login_controller_test.

	* donrails/test/functional/admin/comment_controller_test.rb (Admin::test_delete_comment)
	(Admin::test_manage_comment): move from login_controller_test.

	* donrails/test/functional/admin/trackback_controller_test.rb (Admin::test_delete_trackback)
	(Admin::test_manage_trackback): move from login_controller_test.

	* donrails/test/functional/admin/picture_controller_test.rb (Admin::test_picture_save)
	(Admin::test_delete_picture_2, Admin::test_delete_picture_1)
	(Admin::test_delete_picture, Admin::test_edit_picture_4)
	(Admin::test_edit_picture_3, Admin::test_edit_picture_2)
	(Admin::test_edit_picture_1, Admin::test_edit_picture)
	(Admin::test_manage_picture_detail_1)
	(Admin::test_manage_picture_detail)